# CarrotGameEngine

./: .gitignore  .gitmodules  CARROT_MASTER_PLAN.txt  CMakeLists.txt  CODING_STANDARDS.md  premake5.lua
shaders/: debug_overlay.frag  debug_overlay.vert  triangle.frag  triangle.vert
src/Engine/: CarrotEngine.h  Engine.cpp  Engine.h
src/Engine/Common/: CommonHeaders.h
src/Engine/Core/: Application.cpp  Application.h  LogSink.cpp  LogSink.h  Logger.cpp  Logger.h  Module.h
src/Engine/Core/Platform/Wayland/: WaylandWindow.cpp  WaylandWindow.h
src/Engine/Debug/: DebugOverlay.cpp  DebugOverlay.h  Message.h
src/Engine/HotReload/: ShaderWatcher.cpp  ShaderWatcher.h
src/Engine/RHI/: RHI.h  VulkanContext.cpp  VulkanContext.h
src/Engine/RHI/Backends/Vulkan/: VulkanCommon.h  VulkanContext.cpp  VulkanContext.h  VulkanCore.h  VulkanRenderer.cpp  VulkanRenderer.h
src/Engine/Renderer/: Renderer.h  VulkanRenderer.cpp  VulkanRenderer.h
src/Engine/Utils/: Assert.h  DebugBreak.h  MulticastDelegate.h  ShaderUtils.cpp  ShaderUtils.h
src/Engine/Window/: Window.cpp  Window.h
src/Game/: Game.cpp  Game.h  main.cpp
tools/: CompileShaders.sh
